<resources>
    <!--Main UI-->
    <string name="app_name">CampusUPB</string>
    <string name="title_activity_maps">Harta</string>
    <string name="title_map">Harta</string>
    <string name="title_history">Istoric</string>
    <string name="title_favourites">Favorite</string>
    <string name="title_buildings">Clădiri</string>
    <string name="search">Caută locația…</string>

    <!--Building plans-->
    <string name="image">Imagine</string>
    <string name="building_name">Nume clădire</string>
    <string name="p">P</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="ec">EC</string>
    <string name="ed">ED</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>

    <!--Room info popup-->
    <string name="directions">Navigare</string>
    <string name="start">Start</string>
    <string name="save">Salvează</string>
    <string name="unsave">Șterge</string>
    <string name="name">Nume</string>
    <string name="building">Clădire</string>
    <string name="floor">Etaj</string>
    <string name="type">Tip</string>

    <!--Room types-->
    <string name="LectureHall">Amfiteatru</string>
    <string name="Classroom">Sală de seminar</string>
    <string name="Store">Magazin</string>
    <string name="Office">Birou</string>
    <string name="Laboratory">Laborator</string>
    <string name="Restroom">Toaletă</string>
    <string name="UnknownRoom">Necunoscut</string>

    <!--Toasts-->
    <string name="set_as_source">ales ca sursă</string>
    <string name="not_found">Locația nu a fost găsită</string>
    <string name="dest_cant_be_src">Destinația nu poate fi aceeași ca sursa.</string>
    <string name="src_not_chosen">Nu ați selectat sursa. A fost aleasă automat.</string>

    <!--Directions-->
    <string name="descend">"Coborâți"</string>
    <string name="climb">"Urcați"</string>
    <string name="floors">"etaje"</string>
    <string name="to_floor">"până la etajul"</string>

    <!--Locations-->
    <string name="start_from">"Porniți de la"</string>
    <string name="room">"Sala"</string>
    <string name="is">"este"</string>
    <string name="on_left_side">"pe partea stângă"</string>
    <string name="on_right_side">"pe partea dreaptă"</string>
    <string name="in_front">"în față"</string> <!--an fata pe avari-->
    <string name="reach_dest">"Ați ajuns la destinație"</string>
    <string name="enter_building">"Intrați în"</string>

    <!--Intersections-->
    <string name="go_right">"Faceți dreapta"</string>
    <string name="go_left">"Faceți stânga"</string>
    <string name="go_forward">"Mergeți înainte"</string>
    <string name="go_back">"Mergeți înapoi"</string>
    <string name="towards">"către"</string>
</resources>
