<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ec_container"
        tools:context=".fragments.EdFrag">

    <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/edImage"
            android:contentDescription="@string/ed"
            android:background="@android:color/white"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="52dp" android:layout_height="wrap_content"
                  android:layout_marginBottom="76dp"
                  android:layout_marginEnd="16dp"
                  android:layout_alignParentBottom="true"
                  android:layout_alignParentEnd="true"
                  android:id="@+id/ec_floor_tabs">
        <TabWidget android:id="@android:id/tabs"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:visibility="gone"/>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:orientation="vertical">
            <Button android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1.0"
                    android:id="@+id/ed_floor0"
                    android:text="@string/p"
                    android:background="@color/colorGray"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"/>
            <Button android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1.0"
                    android:id="@+id/ed_floor1"
                    android:background="@color/colorWhite"
                    android:text="@string/_1"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="18sp"/>
            <Button android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1.0"
                    android:id="@+id/ed_floor2"
                    android:background="@color/colorWhite"
                    android:text="@string/_2"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="18sp"/>
            <Button android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1.0"
                    android:id="@+id/ed_floor3"
                    android:background="@color/colorWhite"
                    android:text="@string/_3"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="18sp"/>
            <Button android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1.0"
                    android:id="@+id/ed_floor4"
                    android:background="@color/colorWhite"
                    android:text="@string/_4"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>